{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 448,
  "lineage": "0eab3c50-b85f-2189-7fc4-f82ecc09d802",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "sandbox-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-053038fcc312384bc",
            "domain": "vpc",
            "id": "eipalloc-0b06891ddef665170",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0503890336fff63e5",
            "private_dns": "ip-10-0-1-229.ec2.internal",
            "private_ip": "10.0.1.229",
            "public_dns": "ec2-18-210-220-91.compute-1.amazonaws.com",
            "public_ip": "18.210.220.91",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sandbox-eip"
            },
            "tags_all": {
              "Name": "sandbox-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Private-Serv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096fda3c22c1c990a",
            "arn": "arn:aws:ec2:us-east-1:066073417728:instance/i-0882a1edb62d1eb97",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0882a1edb62d1eb97",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c8fc565e71fd9859",
            "private_dns": "ip-10-0-101-225.ec2.internal",
            "private_ip": "10.0.101.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:066073417728:key/f893bddc-9481-40c6-8847-24867e8d24ca",
                "throughput": 0,
                "volume_id": "vol-026e7e0ff7ba868db",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c8d645aee40f72b",
            "tags": {
              "Name": "Private-Serv1"
            },
            "tags_all": {
              "Name": "Private-Serv1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dca93b000f92a455"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-allow-priv",
            "aws_subnet.sandbox-subnet-private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Private-Serv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096fda3c22c1c990a",
            "arn": "arn:aws:ec2:us-east-1:066073417728:instance/i-041f05cee7de0a6fe",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-041f05cee7de0a6fe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0280e1495732cb6d0",
            "private_dns": "ip-10-0-101-218.ec2.internal",
            "private_ip": "10.0.101.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:066073417728:key/f893bddc-9481-40c6-8847-24867e8d24ca",
                "throughput": 0,
                "volume_id": "vol-01ce453cb42949c9a",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c8d645aee40f72b",
            "tags": {
              "Name": "Private-Serv2"
            },
            "tags_all": {
              "Name": "Private-Serv2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dca93b000f92a455"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-allow-priv",
            "aws_subnet.sandbox-subnet-private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096fda3c22c1c990a",
            "arn": "arn:aws:ec2:us-east-1:066073417728:instance/i-0661c96a97b39b84a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0661c96a97b39b84a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08bdddef431939054",
            "private_dns": "ip-10-0-1-81.ec2.internal",
            "private_ip": "10.0.1.81",
            "public_dns": "ec2-34-229-47-211.compute-1.amazonaws.com",
            "public_ip": "34.229.47.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:066073417728:key/f893bddc-9481-40c6-8847-24867e8d24ca",
                "throughput": 0,
                "volume_id": "vol-028799aa1b55bc667",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06afc9a2124012231",
            "tags": {
              "Name": "Server1"
            },
            "tags_all": {
              "Name": "Server1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d2b780e3290800fe"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-allowed",
            "aws_subnet.sandbox-subnet-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096fda3c22c1c990a",
            "arn": "arn:aws:ec2:us-east-1:066073417728:instance/i-008c76206709ec236",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-008c76206709ec236",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05e31eb8c43a92152",
            "private_dns": "ip-10-0-1-58.ec2.internal",
            "private_ip": "10.0.1.58",
            "public_dns": "ec2-18-234-25-115.compute-1.amazonaws.com",
            "public_ip": "18.234.25.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:066073417728:key/f893bddc-9481-40c6-8847-24867e8d24ca",
                "throughput": 0,
                "volume_id": "vol-09a70e3aefb0caad5",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06afc9a2124012231",
            "tags": {
              "Name": "Server2"
            },
            "tags_all": {
              "Name": "Server2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d2b780e3290800fe"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-allowed",
            "aws_subnet.sandbox-subnet-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sandbox-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:066073417728:internet-gateway/igw-0507e07294408ab7c",
            "id": "igw-0507e07294408ab7c",
            "owner_id": "066073417728",
            "tags": {
              "Name": "sandbox-igw"
            },
            "tags_all": {
              "Name": "sandbox-igw"
            },
            "vpc_id": "vpc-0673b7fcea1abe739"
          },
          "dependencies": [
            "aws_vpc.sandbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "sandbox-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "dcs-elb-access-logging-066073417728-hlqvgldayi",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:066073417728:loadbalancer/app/sandbox-lb-tf/0811630b1e2af22d",
            "arn_suffix": "app/sandbox-lb-tf/0811630b1e2af22d",
            "dns_name": "sandbox-lb-tf-41979965.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:066073417728:loadbalancer/app/sandbox-lb-tf/0811630b1e2af22d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sandbox-lb-tf",
            "security_groups": [
              "sg-0d2b780e3290800fe"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06afc9a2124012231"
              },
              {
                "subnet_id": "subnet-07c8d645aee40f72b"
              }
            ],
            "subnets": [
              "subnet-06afc9a2124012231",
              "subnet-07c8d645aee40f72b"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0673b7fcea1abe739",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ssh-allowed",
            "aws_subnet.sandbox-subnet-private",
            "aws_subnet.sandbox-subnet-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sandbox-NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b06891ddef665170",
            "id": "nat-047eb6787ae1fcbec",
            "network_interface_id": "eni-0503890336fff63e5",
            "private_ip": "10.0.1.229",
            "public_ip": "18.210.220.91",
            "subnet_id": "subnet-06afc9a2124012231",
            "tags": {
              "Name": "sandbox-NAT"
            },
            "tags_all": {
              "Name": "sandbox-NAT"
            }
          },
          "dependencies": [
            "aws_internet_gateway.sandbox-igw",
            "aws_subnet.sandbox-subnet-public",
            "aws_vpc.sandbox-vpc",
            "aws_eip.sandbox-eip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sandbox-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:066073417728:route-table/rtb-03499b522787abad8",
            "id": "rtb-03499b522787abad8",
            "owner_id": "066073417728",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-047eb6787ae1fcbec",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sandbox-private"
            },
            "tags_all": {
              "Name": "sandbox-private"
            },
            "vpc_id": "vpc-0673b7fcea1abe739"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.sandbox-NAT",
            "aws_subnet.sandbox-subnet-public",
            "aws_vpc.sandbox-vpc",
            "aws_eip.sandbox-eip",
            "aws_internet_gateway.sandbox-igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sandbox-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:066073417728:route-table/rtb-07b7223e1574e11a1",
            "id": "rtb-07b7223e1574e11a1",
            "owner_id": "066073417728",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0507e07294408ab7c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sandbox-public"
            },
            "tags_all": {
              "Name": "sandbox-public"
            },
            "vpc_id": "vpc-0673b7fcea1abe739"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sandbox-igw",
            "aws_vpc.sandbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sandbox-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff5b65aab95568e3",
            "route_table_id": "rtb-03499b522787abad8",
            "subnet_id": "subnet-07c8d645aee40f72b"
          },
          "dependencies": [
            "aws_subnet.sandbox-subnet-public",
            "aws_vpc.sandbox-vpc",
            "aws_eip.sandbox-eip",
            "aws_internet_gateway.sandbox-igw",
            "aws_nat_gateway.sandbox-NAT",
            "aws_route_table.sandbox-private",
            "aws_subnet.sandbox-subnet-private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sandbox-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a0f4663a42b5777",
            "route_table_id": "rtb-07b7223e1574e11a1",
            "subnet_id": "subnet-06afc9a2124012231"
          },
          "dependencies": [
            "aws_internet_gateway.sandbox-igw",
            "aws_route_table.sandbox-public",
            "aws_subnet.sandbox-subnet-public",
            "aws_vpc.sandbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allow-priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:066073417728:security-group/sg-0dca93b000f92a455",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dca93b000f92a455",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d2b780e3290800fe"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20210803205146130600000003",
            "name_prefix": "terraform-",
            "owner_id": "066073417728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-allow-priv"
            },
            "tags_all": {
              "Name": "ssh-allow-priv"
            },
            "timeouts": null,
            "vpc_id": "vpc-0673b7fcea1abe739"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ssh-allowed",
            "aws_vpc.sandbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:066073417728:security-group/sg-0d2b780e3290800fe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2b780e3290800fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "167.219.0.140/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "167.219.0.140/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "167.219.88.140/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "167.219.88.140/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210803205140823900000002",
            "name_prefix": "terraform-",
            "owner_id": "066073417728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-allowed"
            },
            "tags_all": {
              "Name": "ssh-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0673b7fcea1abe739"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sandbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sandbox-subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:066073417728:subnet/subnet-07c8d645aee40f72b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-07c8d645aee40f72b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "066073417728",
            "tags": {
              "Name": "sandbox-subnet-private"
            },
            "tags_all": {
              "Name": "sandbox-subnet-private"
            },
            "vpc_id": "vpc-0673b7fcea1abe739"
          },
          "dependencies": [
            "aws_vpc.sandbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sandbox-subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:066073417728:subnet/subnet-06afc9a2124012231",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06afc9a2124012231",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "066073417728",
            "tags": {
              "Name": "sandbox-subnet-public"
            },
            "tags_all": {
              "Name": "sandbox-subnet-public"
            },
            "vpc_id": "vpc-0673b7fcea1abe739"
          },
          "dependencies": [
            "aws_vpc.sandbox-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sandbox-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:066073417728:vpc/vpc-0673b7fcea1abe739",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-009eaac3abac9e41c",
            "default_route_table_id": "rtb-021527362ac4d297d",
            "default_security_group_id": "sg-03deeb4ee57221ed2",
            "dhcp_options_id": "dopt-43dc8539",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0673b7fcea1abe739",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-021527362ac4d297d",
            "owner_id": "066073417728",
            "tags": {
              "Name": "sandbox-vpc"
            },
            "tags_all": {
              "Name": "sandbox-vpc"
            }
          }
        }
      ]
    }
  ]
}